--- a/index.html
+++ b/index.html
@@ -1,58 +1,107 @@
-<!DOCTYPE html>
 <html>
-  <head>
-    <meta charset='utf-8'>
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+<head>
+    <title>Welcome to my transparent web page | John Migas</title>
+</head>
+<body>
+<h1>John Migas</h1>
+<p>In computer science when a programs output is identical to the source code it is called a <a href='https://en.wikipedia.org/wiki/Quine_(computing)' target='_blank'>quine</a>. Of my core values the greatest are honestly and transparency and I found this to be a fitting example for my personal web page.</p>
+<h2>Works</h2>
+<h3>E2open</h3>
+<p>I am currently employed by <a href='https://e2open.com' target='_blank'>E2open</a> as a Senior Software Engineer where I have the pleasure of working with teams located all over the world. My primary focus has been to combine our various products into what users experience as one solution. Our clients also utilize their own products and vendors and I work to bring this all together seamlessly.</p>
+<h3>Averetek</h3>
+<p>Previously I worked with an amazing team of dedicated people at <a href='http://web.archive.org/web/20190220141356/https://www.averetek.com/' target='_blank'>Averetek</a>. We built a Marketing Automation platform from the ground up that shook up the industry. One of my greatest joys was  working with clients to understand their challenges, determine requirements, scope and help shape their vision.</p>
+<h2>Personal Life</h2>
+<p>Currently located in the Pacific Northwest where my family and I enjoy venturing into the great outdoors. My hobbies include practicing Kendo (pre-Covid anyway), 3d Printing, Snow sports, video games (designing and playing them), Machine Learning, Arduino/Rasperry Pi, device security, exploitation and penetration testing. I have also been experimenting with pellet smoking and enjoy the PNW's many craft and microbreweries.</p>
+<style>
+	* { display: block; }
 
-    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="stylesheets/github-dark.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
+	* {
+	 font-family: Monospace;
+	 margin: 0.5em 0;
+	 padding: 0;
+	 text-decoration: none;
+	}
 
-    <title>Migasj.GitHub.io by migasj</title>
-  </head>
+	*::before, *::after {
+	 color: var(--monokai-green);
+	 font-weight: 100;
+	 font-size: 1.0em;
+	}
 
-  <body>
+	a, code, strong { display: inline; }
+	style, blockquote { white-space: pre-wrap; }
 
-    <header>
-      <div class="container">
-        <h1>Migasj.GitHub.io</h1>
-        <h2>John Migas</h2>
+	html::before {content:'<html>';}
+	html::after {content:'</html>';}
+	head::before {content:'<head>';}
+	head::after {content:'</head>';}
+	title::before {content:'<title>';}
+	title::after {content:'</title>';}
+	body::before {content:'<body>';}
+	body::after {content:'</body>';}
+	h1::before {content:'<h1>';}
+	h1::after {content:'</h1>';}
+	h2::before {content:'<h2>';}
+	h2::after {content:'</h2>';}
+	h3::after {content:'</h3>';}
+	h3::before {content:'<h3>';}
+	p::before {content:'<p>';}
+	p::after {content:'</p>';}
+	code::before {content:'<code>';}
+	code::after {content:'</code>';}
+	a::before {content:'<a>';}
+	a::after {content:'</a>';}
+	aside::before {content:'<aside>';}
+	aside::after {content:'</aside>';}
+	strong::before {content:'<strong>';}
+	strong::after {content:'</strong>';}
 
-        <section id="downloads">
-          <a href="https://github.com/migasj" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
-        </section>
-      </div>
-    </header>
+	style::before {content:'<style>';}
+	style::after {content:'<\/style>';}
+	style:contain("content") { color: var(--monokai-yellow); }
 
-    <div class="container">
-      <section id="main_content">
-        <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+	a[href]::before {content: "<a href='" attr(href) "'>"; }
+	a:link { color: var(--monokai-lightpurple), 1); }
+	a:visited { color: var(--monokai-lightpurple); }
+	a:hover { color: var(--monokai-yellow); }
+	a:active { color: var(--monokai-lightpurple), 1); }
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
+	html {
+	 max-width: 70ch;
+	 padding: 2ch;
+	 margin: auto;
+	 color: var(--monokai-lightpink);
+	 font-size: 1.2em;
+	 background-color: var(--monokai-gray);
+	}
 
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Designer Templates</h3>
+	title { color: var(--monokai-yellow); }
+	body { color: var(--monokai-lightpink); }
+	h1 { color: var(--monokai-yellow); }
+	h2 { color: var(--monokai-orange); }
+	h3 { color: var(--monokai-teal); }
+	aside { color: var(--monokai-teal); }
+	code { color: var(--monokai-darkpurple); }
+	style { color: var(--monokai-darkpurple); }
 
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
-
-<h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Creating pages manually</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can <a href="https://help.github.com/articles/basic-writing-and-formatting-syntax/#mentioning-users-and-teams" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
-      </section>
-    </div>
-
-    
-  </body>
+	:root {
+	 --monokai-gray: rgba(28, 28, 28, 1);
+	 --monokai-pink: rgba(150,0,80, 0.8);
+	 --monokai-lightpink: rgba(249,38,114, 1);
+	 --monokai-seagreen: rgba(0, 136, 119, 1);
+	 --monokai-green: rgba(116, 226, 46, 1);
+	 --monokai-orange: rgba(253, 151, 31, 1);
+	 --monokai-yellow: rgba(230, 219, 116, 1);
+	 --monokai-purple: rgba(119, 17, 221, 1);
+	 --monokai-lightpurple: rgba(132, 50, 255, 1);
+	 --monokai-magenta: rgba(137, 0, 137, 1);
+	 --monokai-darkpurple: rgba(117, 80, 123, 1);
+	 --monokai-teal: rgba(0, 214, 181, 1);
+	 --monokai-lightteal: rgba(81, 237, 188, 1);
+	 --monokai-lightgray: rgba(136, 138, 133, 1);
+	 --monokai-brightgray: rgba(136, 138, 133, 1);
+	}
+</style>
+<aside>As fun clever as this design concept is I cannot take credit for it. I was inspired by this example: <a href='https://github.com/secretGeek/html_wysiwyg/' target='_blank'>source code here</a></aside>
+</body>
 </html>
