Adjusting colors for readability

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 </head>
 <body>
 <h1>John Migas</h1>
-<p>In computer science when a programs output is identical to the source code it is called a <a href='https://en.wikipedia.org/wiki/Quine_(computing)' target='_blank'>quine</a>. Of my core values the greatest are honestly and transparency and I found this to be a fitting example for my personal web page.</p>
+<p>In computer science when a programs' output is identical to the source code it is called a <a href='https://en.wikipedia.org/wiki/Quine_(computing)' target='_blank'>quine</a>. Of my core values, the greatest are honestly and transparency and I found this to be a fitting example for my personal web page.</p>
 <h2>Works</h2>
 <h3>E2open</h3>
 <p>I am currently employed by <a href='https://e2open.com' target='_blank'>E2open</a> as a Senior Software Engineer where I have the pleasure of working with teams located all over the world. My primary focus has been to combine our various products into what users experience as one solution. Our clients also utilize their own products and vendors and I work to bring this all together seamlessly.</p>
@@ -12,96 +12,97 @@
 <p>Previously I worked with an amazing team of dedicated people at <a href='http://web.archive.org/web/20190220141356/https://www.averetek.com/' target='_blank'>Averetek</a>. We built a Marketing Automation platform from the ground up that shook up the industry. One of my greatest joys was  working with clients to understand their challenges, determine requirements, scope and help shape their vision.</p>
 <h2>Personal Life</h2>
 <p>Currently located in the Pacific Northwest where my family and I enjoy venturing into the great outdoors. My hobbies include practicing Kendo (pre-Covid anyway), 3d Printing, Snow sports, video games (designing and playing them), Machine Learning, Arduino/Rasperry Pi, device security, exploitation and penetration testing. I have also been experimenting with pellet smoking and enjoy the PNW's many craft and microbreweries.</p>
+<aside>This is where the magic happens and the hidden HTML elements are made visible.</aside>
 <style>
-	* { display: block; }
+* { display: block; }
 
-	* {
-	 font-family: Monospace;
-	 margin: 0.5em 0;
-	 padding: 0;
-	 text-decoration: none;
-	}
+* {
+ font-family: Monospace;
+ margin: 0.5em 0;
+ padding: 0;
+ text-decoration: none;
+}
 
-	*::before, *::after {
-	 color: var(--monokai-green);
-	 font-weight: 100;
-	 font-size: 1.0em;
-	}
+*::before, *::after {
+ color: var(--monokai-darkpurple);
+ font-weight: 100;
+ font-size: 1.0em;
+}
 
-	a, code, strong { display: inline; }
-	style, blockquote { white-space: pre-wrap; }
+a, code, strong { display: inline; }
+style, blockquote { white-space: pre-wrap; }
 
-	html::before {content:'<html>';}
-	html::after {content:'</html>';}
-	head::before {content:'<head>';}
-	head::after {content:'</head>';}
-	title::before {content:'<title>';}
-	title::after {content:'</title>';}
-	body::before {content:'<body>';}
-	body::after {content:'</body>';}
-	h1::before {content:'<h1>';}
-	h1::after {content:'</h1>';}
-	h2::before {content:'<h2>';}
-	h2::after {content:'</h2>';}
-	h3::after {content:'</h3>';}
-	h3::before {content:'<h3>';}
-	p::before {content:'<p>';}
-	p::after {content:'</p>';}
-	code::before {content:'<code>';}
-	code::after {content:'</code>';}
-	a::before {content:'<a>';}
-	a::after {content:'</a>';}
-	aside::before {content:'<aside>';}
-	aside::after {content:'</aside>';}
-	strong::before {content:'<strong>';}
-	strong::after {content:'</strong>';}
+html::before {content:'<html>';}
+html::after {content:'</html>';}
+head::before {content:'<head>';}
+head::after {content:'</head>';}
+title::before {content:'<title>';}
+title::after {content:'</title>';}
+body::before {content:'<body>';}
+body::after {content:'</body>';}
+h1::before {content:'<h1>';}
+h1::after {content:'</h1>';}
+h2::before {content:'<h2>';}
+h2::after {content:'</h2>';}
+h3::after {content:'</h3>';}
+h3::before {content:'<h3>';}
+p::before {content:'<p>';}
+p::after {content:'</p>';}
+code::before {content:'<code>';}
+code::after {content:'</code>';}
+a::before {content:'<a>';}
+a::after {content:'</a>';}
+aside::before {content:'<aside>';}
+aside::after {content:'</aside>';}
+strong::before {content:'<strong>';}
+strong::after {content:'</strong>';}
 
-	style::before {content:'<style>';}
-	style::after {content:'<\/style>';}
-	style:contain("content") { color: var(--monokai-yellow); }
+style::before {content:'<style>';}
+style::after {content:'<\/style>';}
+style:contain("content") { color: var(--monokai-yellow); }
 
-	a[href]::before {content: "<a href='" attr(href) "'>"; }
-	a:link { color: var(--monokai-lightpurple), 1); }
-	a:visited { color: var(--monokai-lightpurple); }
-	a:hover { color: var(--monokai-yellow); }
-	a:active { color: var(--monokai-lightpurple), 1); }
+a[href]::before {content: "<a href='" attr(href) "'>"; }
+a:link { color: var(--monokai-lightpurple), 1); }
+a:visited { color: var(--monokai-lightpurple); }
+a:hover { color: var(--monokai-yellow); }
+a:active { color: var(--monokai-lightpurple), 1); }
 
-	html {
-	 max-width: 70ch;
-	 padding: 2ch;
-	 margin: auto;
-	 color: var(--monokai-lightpink);
-	 font-size: 1.2em;
-	 background-color: var(--monokai-gray);
-	}
+html {
+ max-width: 70ch;
+ padding: 2ch;
+ margin: auto;
+ color: var(--monokai-lightpink);
+ font-size: 1.2em;
+ background-color: var(--monokai-gray);
+}
 
-	title { color: var(--monokai-yellow); }
-	body { color: var(--monokai-lightpink); }
-	h1 { color: var(--monokai-yellow); }
-	h2 { color: var(--monokai-orange); }
-	h3 { color: var(--monokai-teal); }
-	aside { color: var(--monokai-teal); }
-	code { color: var(--monokai-darkpurple); }
-	style { color: var(--monokai-darkpurple); }
+title { color: var(--monokai-yellow); }
+body { color: var(--monokai-lightpink); }
+h1 { color: var(--monokai-yellow); }
+h2 { color: var(--monokai-orange); }
+h3 { color: var(--monokai-teal); }
+aside { color: var(--monokai-teal); }
+code { color: var(--monokai-darkpurple); }
+style { color: var(--monokai-lightgray); }
 
-	:root {
-	 --monokai-gray: rgba(28, 28, 28, 1);
-	 --monokai-pink: rgba(150,0,80, 0.8);
-	 --monokai-lightpink: rgba(249,38,114, 1);
-	 --monokai-seagreen: rgba(0, 136, 119, 1);
-	 --monokai-green: rgba(116, 226, 46, 1);
-	 --monokai-orange: rgba(253, 151, 31, 1);
-	 --monokai-yellow: rgba(230, 219, 116, 1);
-	 --monokai-purple: rgba(119, 17, 221, 1);
-	 --monokai-lightpurple: rgba(132, 50, 255, 1);
-	 --monokai-magenta: rgba(137, 0, 137, 1);
-	 --monokai-darkpurple: rgba(117, 80, 123, 1);
-	 --monokai-teal: rgba(0, 214, 181, 1);
-	 --monokai-lightteal: rgba(81, 237, 188, 1);
-	 --monokai-lightgray: rgba(136, 138, 133, 1);
-	 --monokai-brightgray: rgba(136, 138, 133, 1);
-	}
+:root {
+ --monokai-gray: rgba(28, 28, 28, 1);
+ --monokai-pink: rgba(150,0,80, 0.8);
+ --monokai-lightpink: rgba(249,38,114, 1);
+ --monokai-seagreen: rgba(0, 136, 119, 1);
+ --monokai-green: rgba(116, 226, 46, 1);
+ --monokai-orange: rgba(253, 151, 31, 1);
+ --monokai-yellow: rgba(230, 219, 116, 1);
+ --monokai-purple: rgba(119, 17, 221, 1);
+ --monokai-lightpurple: rgba(132, 50, 255, 1);
+ --monokai-magenta: rgba(137, 0, 137, 1);
+ --monokai-darkpurple: rgba(117, 80, 123, 1);
+ --monokai-teal: rgba(0, 214, 181, 1);
+ --monokai-lightteal: rgba(81, 237, 188, 1);
+ --monokai-lightgray: rgba(136, 138, 133, 1);
+ --monokai-brightgray: rgba(136, 138, 133, 1);
+}
 </style>
-<aside>As fun clever as this design concept is I cannot take credit for it. I was inspired by this example: <a href='https://github.com/secretGeek/html_wysiwyg/' target='_blank'>source code here</a></aside>
+<aside>As fun clever as this design concept is, I cannot take credit for it. I was inspired by this example: <a href='https://github.com/secretGeek/html_wysiwyg/' target='_blank'>source code here</a></aside>
 </body>
 </html>
