--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <h3>Averetek</h3>
 <p>Previously I worked with an amazing team of dedicated people at <a href='http://web.archive.org/web/20190220141356/https://www.averetek.com/' target='_blank'>Averetek</a>. We built a Marketing Automation platform that shook up the industry. One of my greatest joys was working with clients to understand their challenges, determine requirements, scope and help shape their vision.</p>
 <h2>Personal Life</h2>
-<p>Currently located in the Pacific Northwest where my family and I enjoy venturing into the great outdoors. My hobbies include practicing Kendo (pre-Covid anyway), 3d Printing, Snow sports, video games (designing and playing them), Machine Learning, Arduino/Rasperry Pi, device security, exploitation and penetration testing. I have also been experimenting with pellet smoking and enjoy the PNW's many craft and microbreweries.</p>
+<p>Currently located in the Pacific Northwest where my family and I enjoy venturing into the great outdoors. My hobbies include practicing Kendo (pre-Covid anyway), 3d Printing, Snow sports, video games fooling around in Unreal Engine, Machine Learning, Arduino/Rasperry Pi, device security, exploitation and penetration testing. I have also been experimenting with pellet smoking and enjoy the PNW's many craft and microbreweries.</p>
 <aside>This is where the magic happens and the hidden HTML elements are made visible.</aside>
 <style>
 * { display: block; }
