--- a/index.html
+++ b/index.html
@@ -105,6 +105,6 @@ style { color: var(--monokai-lightgray); }
  --monokai-brightgray: rgba(136, 138, 133, 1);
 }
 </style>
-<aside>As fun clever as this design concept is, I cannot take credit for it. I was inspired by this example: <a href='https://github.com/secretGeek/html_wysiwyg/' target='_blank'>source code here</a></aside>
+<aside>As fun and clever as this design concept is, I cannot take credit for it. I was inspired by this example: <a href='https://github.com/secretGeek/html_wysiwyg/' target='_blank'>source code here</a></aside>
 </body>
 </html>
