--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <html>
 <head>
-  <title>Welcome to my transparent web page | John Migas</title>
+  <title>Welcome to my transparent homepage | John Migas</title>
 </head>
 <body>
 <h1>John Migas</h1>
 <p>In computer science when the output of a program is identical to the source code it is called a <a href='https://en.wikipedia.org/wiki/Quine_(computing)' target='_blank'>quine</a>. Of my core values, the greatest are honestly and transparency and I found this concept to be a fitting example for my personal web page.</p>
-<h2>Works</h2>
+<h2>Work Life</h2>
 <h3>E2open</h3>
 <p>I am currently employed by <a href='https://e2open.com' target='_blank'>E2open</a> as a Senior Software Engineer where I have the pleasure of working with teams located all over the world. My primary focus has been to combine our various products into what users experience as one solution. Our clients also utilize their own products and vendors and I work to bring this all together seamlessly.</p>
 <h3>Averetek</h3>
 <p>Previously I worked with an amazing team of dedicated people at <a href='http://web.archive.org/web/20190220141356/https://www.averetek.com/' target='_blank'>Averetek</a>. We built a Marketing Automation platform that shook up the industry. One of my greatest joys was working with clients to understand their challenges, determine requirements, scope and help shape their vision.</p>
 <h2>Personal Life</h2>
-<p>Currently located in the Pacific Northwest where my family and I enjoy venturing into the great outdoors. My hobbies include practicing Kendo (pre-Covid anyway), 3d Printing, Snow sports, video games fooling around in Unreal Engine, Machine Learning, Arduino/Rasperry Pi, device security, exploitation and penetration testing. I have also been experimenting with pellet smoking and enjoy the PNW's many craft and microbreweries.</p>
+<p>Currently located in the Pacific Northwest where my family and I enjoy venturing into the great outdoors. My hobbies include practicing Kendo (pre-Covid anyway), 3d Printing, Snow sports, video games fooling around in Unreal Engine, Machine Learning, Arduino/Rasperry Pi, device security, exploitation and penetration testing. I love to cook and have also been experimenting with pellet smoking. I also enjoy taking advantage of the PNW's abundant supply of craft and microbreweries.</p>
 <aside>This is where the magic happens and the hidden HTML elements are made visible.</aside>
 <style>
 * { display: block; }
