--- a/index.html
+++ b/index.html
@@ -62,10 +62,10 @@ style::after {content:'<\/style>';}
 style:contain("content") { color: var(--monokai-yellow); }
 
 a[href]::before {content: "<a href='" attr(href) "'>"; }
-a:link { color: var(--monokai-yellow), 1); }
+a:link { color: var(--monokai-yellow); }
 a:visited { color: var(--monokai-yellow); }
 a:hover { color: var(--monokai-green); }
-a:active { color: var(--monokai-yellow), 1); }
+a:active { color: var(--monokai-yellow); }
 
 html {
  max-width: 70ch;
