--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 </head>
 <body>
 <h1>John Migas</h1>
-<p>In computer science when the output of a program is identical to the source code it is called a <a href='https://en.wikipedia.org/wiki/Quine_(computing)' target='_blank'>quine</a>. Of my core values, the greatest are honestly and transparency and I found this concept to be a fitting example for my personal web page.</p>
+<p>Of my core values, the greatest are honestly and transparency and I found this concept to be a fitting example for my personal web page.</p>
 <h2>Work Life</h2>
 <h3>E2open</h3>
 <p>I am currently employed by <a href='https://e2open.com' target='_blank'>E2open</a> as a Senior Software Engineer where I have the pleasure of working with teams located all over the world. My primary focus has been to combine our various products into what users experience as one solution. Our clients also utilize their own products and vendors and I work to bring this all together seamlessly.</p>
