--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
 </head>
 <body>
 <h1>John Migas</h1>
-<p>Of my core values, the greatest are honestly and transparency and I found this concept to be a fitting example for my personal web page.</p>
+<p>Of my core values, the greatest are honestly and transparency and I found this design concept to be a fitting example for my personal web page.</p>
 <h2>Work Life</h2>
 <h3>E2open</h3>
-<p>I am currently employed by <a href='https://e2open.com' target='_blank'>E2open</a> as a Senior Software Engineer where I have the pleasure of working with teams located all over the world. My primary focus has been to combine our various products into what users experience as one solution. Our clients also utilize their own products and vendors and I work to bring this all together seamlessly.</p>
+<p>I am currently employed by <a href='https://www.e2open.com' target='_blank'>E2open</a> as a Senior Software Engineer where I have the pleasure of working with teams located all over the world. My primary focus has been to combine our various products into what users experience as one solution. Our clients also utilize their own products and vendors and I work to bring everything together seamlessly into one application.</p>
 <h3>Averetek</h3>
 <p>Previously I worked with an amazing team of dedicated people at <a href='http://web.archive.org/web/20190220141356/https://www.averetek.com/' target='_blank'>Averetek</a>. We built a Marketing Automation platform that shook up the industry. One of my greatest joys was working with clients to understand their challenges, determine requirements, scope and help shape their vision.</p>
+<h3>Dark Frequency</h3>
+<p>My first real programming job was with a custom software consultant called <a href='http://web.archive.org/web/20060510052032/http://www.darkfrequency.com:80/' target='_blank'>Dark Frequency</a>. With Dark Frequency I was building a variety of software and web applications in an environment where the project would be completely different every three to six months. I was rapidly introduced to new clients and technologies and thrived in the fast moving environment.</p>
 <h2>Personal Life</h2>
 <p>Currently located in the Pacific Northwest where my family and I enjoy venturing into the great outdoors. My hobbies include practicing Kendo (pre-Covid anyway), 3d Printing, Snow sports, video games fooling around in Unreal Engine, Machine Learning, Arduino/Rasperry Pi, device security, exploitation and penetration testing. I love to cook and have also been experimenting with pellet smoking. I also enjoy taking advantage of the PNW's abundant supply of craft and microbreweries.</p>
 <aside>This is where the magic happens and the hidden HTML elements are made visible.</aside>
