--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 <p>Of my core values, the greatest are honestly and transparency and I found this design concept to be a fitting example for my personal web page.</p>
 <h2>Work Life</h2>
 <h3>E2open</h3>
-<p>I am currently employed by <a href='https://www.e2open.com' target='_blank'>E2open</a> as a Senior Software Engineer working in a diverse team composed of offices located all over the world. The number of products offered has been grown rapidly and my primary focus has been to combine these independent products into what our users experience as one solution. This is being accomplished by creating and consuming web API's between the applications as well as utilizing internal and 3rd party SSO solutions.</p>
+<p>Currently working as a Backend ENgineer at my alma mater, the University of Washington. Working at the Office of Research and Information Systems I writing software to support the Universities research teams.<p>
+<p>Previously at <a href='https://www.e2open.com' target='_blank'>E2open</a> as a Senior Software Engineer working in a diverse team composed of offices located all over the world. The number of products offered has been grown rapidly and my primary focus has been to combine these independent products into what our users experience as one solution. This is being accomplished by creating and consuming web API's between the applications as well as utilizing internal and 3rd party SSO solutions.</p>
 <h3>Averetek</h3>
 <p>Previously I worked with an amazing team of dedicated people at <a href='http://web.archive.org/web/20190220141356/https://www.averetek.com/' target='_blank'>Averetek</a>. We built a Marketing Automation platform that shook up the industry and I was able to be a part it all from conception to the sale of the company. One of my greatest joys was working with clients to understand their challenges, determine requirements and scope, and as a developer, bring their vision to reality.</p>
 <h3>Dark Frequency</h3>
