--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <p>Of my core values, the greatest are honestly and transparency and I found this design concept to be a fitting example for my personal web page.</p>
 <h2>Work Life</h2>
 <h3>Office of Research and Information Systems - University of Washington</h3>
-<p>Currently working as a Backend ENgineer at my alma mater, the University of Washington. Working at the Office of Research and Information Systems I writing software to support the Universities research teams.<p>
+<p>Currently working as a Backend Engineer at my alma mater, the University of Washington. Working at the Office of Research and Information Systems I writing software to support the Universities research teams.<p>
 <h3>E2open</h3>
 <p>Previously at <a href='https://www.e2open.com' target='_blank'>E2open</a> as a Senior Software Engineer working in a diverse team composed of offices located all over the world. The number of products offered has been grown rapidly and my primary focus has been to combine these independent products into what our users experience as one solution. This is being accomplished by creating and consuming web API's between the applications as well as utilizing internal and 3rd party SSO solutions.</p>
 <h3>Averetek</h3>
